--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,11 +18,11 @@ const { title } = Astro.props;
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/LogoHGM.png" />
     <meta name="generator" content={Astro.generator} />
     <meta
       name="description"
-      content="Dark themed website template built on AstroJS, designed for technological startup business."
+      content="Empresa Importadora de productos, HGM."
     />
     <title>{title}</title>
   </head>
@@ -31,7 +31,7 @@ const { title } = Astro.props;
     <style is:global>
       html {
         font-family: Inter;
-        background-color: #26272b;
+        /* background-color: #26272b; */
         overflow-x: hidden;
         scroll-behavior: smooth;
       }
