--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,13 +22,13 @@ import "../styles/Diagonals.css";
   <Navbar client:load />
   <Hero client:load />
   <Features1 client:load />
-  <Divider />
-  <Features2 client:load />
+  <!-- <Divider /> -->
+  <!-- <Features2 client:load /> -->
   <Testimonials client:load />
   <FeaturesDiagonal client:load />
-  <Pricing client:load />
+  <!-- <Pricing client:load /> -->
   <Brands client:load />
-  <FAQ client:load />
+  <!-- <FAQ client:load /> -->
   <Footer />
   <ScrollUpButton client:load />
 </Layout>
